--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,11 @@
     <body>
         <header class="cabecalho">
             <div class="caixa">
-            <h1><img src="Barba.caveira-removebg-preview.png"  height="400" width="400"></h1>
+
+        
+      </div>
+    
+            <h1><img src="caveira-01.png"  height="300" width="300"></h1>
 
             <nav>
                 <ul>
@@ -33,7 +37,7 @@
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="caveira+_barba-removebg-preview.png"  height="250" width="300">
+                    <img src="caveura +barrba.png"  height="250" width="300">
                     <p class="produto-descricao">Corte e desenho profissional de barba</p>
                     <p class="produto-preco">R$ 18,00</p>
                 </li>
