--- a/produtos.html
+++ b/produtos.html
@@ -37,13 +37,13 @@
                 </li>
                 <li>
                     <h2>Barba</h2>
-                    <img src="caveura +barrba.png"  height="250" width="300">
+                    <img src="caveira+_barba--removebg-preview (1).png"  height="250" width="300">
                     <p class="produto-descricao">Corte e desenho profissional de barba</p>
                     <p class="produto-preco">R$ 18,00</p>
                 </li>
                 <li>
                     <h2>Cabelo + Barba</h2>
-                    <img src="caveira.03.png"  height="250" width="300">
+                    <img src="caveira-barba+_cabelo-removebg-preview (1).png"  height="250" width="300">
                     <p class="produto-descricao">Pacote completo de cabelo e barba</p>
                     <p class="produto-preco">R$ 35,00</p>
                     
